--- a/Nhungjavascript.html
+++ b/Nhungjavascript.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <script>
-        function showMessage(){
-            alert('xin chào')
-        }
-    </script>
+    <script src="main.js"></script>
 </head>
 <body>
-    <button type="button" onclick="showMessage();">click Me!</button>
+    <button type="button" onclick="showMessage()";> click me</button>
+
+
+
+
+<!--    <button type="button" onclick= alert('hello');> click Me!</button>-->
+
 </body>
 </html>
